[type]:   fix [module]: ListView [id]:     #135 [desc]:   Remove unnecessary overflow css.
git-svn-id: http://code.extjs.com/svn/ext/trunk@5621 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/list-view.css
+++ b/resources/css/structure/list-view.css
@@ -78,6 +78,3 @@
     padding-bottom:3px;
 }
 
-.x-list-wrap {
-    overflow: auto;
-}
